fix(product-service): fix Redis cache deserialization crash on getAllProducts and log swallowed exceptions